# log

./: .gitignore  .pal.cpp.swp  CMakeLists.txt  LICENSE  README.md  hello.c
examples/: example.c
include/log/: log.h
